# Bolt-robot-Estimator

./: .gitignore  LICENSE  README.txt  pyproject.toml  readme.md  supprime.py
.spyproject/config/: workspace.ini
bolt_estimator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bolt_estimator/data/: DataImprover.py  DataLogReader.py  DataReader.py  EstimatorLogReader.py  data_log_reader.py  data_reader.py  estimator_log_reader.py
bolt_estimator/estimator/: Bolt_ContactEstimator.py  Bolt_Estimator_0.py  Bolt_Filter.py  Bolt_Filter_Complementary.py  Bolt_FootAttitudeEstimator.py  Bolt_TiltEstimator.py  ContactEstimator.py  filter.py  (+10 more)
data/: DataImprover.py  DataLogReader.py  DataOut.py  DataReader.py  X_array_4.npy
estimator/: Estimator_Light.py
miscanellous/: com_pos_superplus.npy  com_speed_superplus.npy
pin/: PinTest_0.py  PinTest_1.py  PinTest_2.py  PinTest_3.py  PinTest_4.py  PinTest_5.py  PinTest_6.py  PinTest_7.py
tests/: Data_Improver.py  DeviceEmulator.py  Graphics.py  Plot_com.py  Test_Estimator_0.py  Test_Estimator_1.py  Test_Filter.py  Test_MocapIMUFilter.py  Test_RealDataGeneratingFiltering.py  Test_SpeedFilter.py  Test_TrajFilter.py  Test_TrajectoryGenerator.py  Test_Utils.py  TrajectoryGenerator.py  TranjectoryGenerator.py  X_array_4_improved.npy  com_pos.npy  com_pos_superplus.npy  test_estimator.py  test_filter.py  test_mocap_imu_filter.py  test_pinocchio.py  test_real_data_generating_filtering.py  test_speed_filter.py  test_traj_filter.py  test_trajectory_generator.py  test_utils.py  vcom_pos.npy  vcom_pos_superplus.npy
utils/: Bolt_Utils.py
(+134 files in other folders)
