[project]
name = "bolt_estimator"
description = "first bolt estimator package try"
version = "0.8.0"
authors = [
    { name = "Niels Albrecht", email = "niels@niels.com" }
]
dependencies = [
	"numpy"
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = [
    "bolt_estimator",
    "bolt_estimator.estimator",
    "bolt_estimator.utils",
]
